# Trok_et_al_SciAdv2024_v1

./: README.md  environment.yml  requirements.txt  setup.py
input_data_ERA5/: 0_make_region_dirs.sh  1_download_files.ipynb  1_download_files.py  4_unzip_ERA5_land.sh  5_hourly_2_daily.ipynb  6_regrid_vars.sh
poetry_env/: environment.yaml  pyproject.toml
project_fxns/: fxns.py  load_region.py  model_fxns.py  parameters.py
